--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src=".js/script.js"></script>
     <link rel="stylesheet" href="./css/main.css">
-   
-    <title>Document</title>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script defer src="./js/script.js"></script:> 
+    <title>The Office App</title>
 </head>
+
 <body>
-    <h1>The Office App</h1>
+    <header>
+        <h1>the office app</h1>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+        <p>Copyright &copy; All Rights Reserved 2020 the office app</p>
+    </footer>
 </body>
+
 </html>
