adds static representation of cards

--- a/index.html
+++ b/index.html
@@ -16,7 +16,56 @@
         <h1>the office app</h1>
     </header>
     <main>
-
+        <section id="collection">
+            <article class="card">
+                <h3>Character Name</h3>
+            </article>
+            <article class="card">
+                <h3>Character Name</h3>
+            </article>
+            <article class="card">
+                <h3>Character Name</h3>
+            </article>
+            <article class="card">
+                <h3>Character Name</h3>
+            </article>
+            <article class="card">
+                <h3>Character Name</h3>
+            </article>
+            <article class="card">
+                <h3>Character Name</h3>
+            </article>
+            <article class="card">
+                <h3>Character Name</h3>
+            </article>
+            <article class="card">
+                <h3>Character Name</h3>
+            </article>
+            <article class="card">
+                <h3>Character Name</h3>
+            </article>
+            <article class="card">
+                <h3>Character Name</h3>
+            </article>
+            <article class="card">
+                <h3>Character Name</h3>
+            </article>
+            <article class="card">
+                <h3>Character Name</h3>
+            </article>
+            <article class="card">
+                <h3>Character Name</h3>
+            </article>
+            <article class="card">
+                <h3>Character Name</h3>
+            </article>
+            <article class="card">
+                <h3>Character Name</h3>
+            </article>
+            <article class="card">
+                <h3>Character Name</h3>
+            </article>
+        </section>
     </main>
     <footer>
         <p>Copyright &copy; All Rights Reserved 2020 the office app</p>
