--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/main.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script defer src="./js/script.js"></script:> 
+    <script defer src="./js/script.js"></script> 
     <title>The Office App</title>
 </head>
 
@@ -17,52 +17,52 @@
     </header>
     <main>
         <section id="collection">
-            <article class="card">
+            <article class="card flex-ctr">
                 <h3>Character Name</h3>
             </article>
-            <article class="card">
+            <article class="card flex-ctr">
                 <h3>Character Name</h3>
             </article>
-            <article class="card">
+            <article class="card flex-ctr">
                 <h3>Character Name</h3>
             </article>
-            <article class="card">
+            <article class="card flex-ctr">
                 <h3>Character Name</h3>
             </article>
-            <article class="card">
+            <article class="card flex-ctr">
                 <h3>Character Name</h3>
             </article>
-            <article class="card">
+            <article class="card flex-ctr">
                 <h3>Character Name</h3>
             </article>
-            <article class="card">
+            <article class="card flex-ctr">
                 <h3>Character Name</h3>
             </article>
-            <article class="card">
+            <article class="card flex-ctr">
                 <h3>Character Name</h3>
             </article>
-            <article class="card">
+            <article class="card flex-ctr">
                 <h3>Character Name</h3>
             </article>
-            <article class="card">
+            <article class="card flex-ctr">
                 <h3>Character Name</h3>
             </article>
-            <article class="card">
+            <article class="card flex-ctr">
                 <h3>Character Name</h3>
             </article>
-            <article class="card">
+            <article class="card flex-ctr">
                 <h3>Character Name</h3>
             </article>
-            <article class="card">
+            <article class="card flex-ctr">
                 <h3>Character Name</h3>
             </article>
-            <article class="card">
+            <article class="card flex-ctr">
                 <h3>Character Name</h3>
             </article>
-            <article class="card">
+            <article class="card flex-ctr">
                 <h3>Character Name</h3>
             </article>
-            <article class="card">
+            <article class="card flex-ctr">
                 <h3>Character Name</h3>
             </article>
         </section>
