updated class for main/section tags

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <header>
         <h1>the office app</h1>
     </header>
-    <main>
-        <section id="collection">
+    <main class="flex-ctr">
+        <section class="flex-ctr" id="collection">
             <article class="card flex-ctr">
                 <h3>Character Name</h3>
             </article>
