--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
+    <!DOCTYPE html>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script defer src="./js/script.js"></script> 
@@ -13,62 +14,15 @@
 
 <body>
     <header>
-        <h1>the office app</h1>
+        <h1>The Lord of the Rings app</h1>
     </header>
     <main class="flex-ctr">
-        <section class="flex-ctr" id="collection">
-            <article class="card flex-ctr">
-                <h3>Character Name</h3>
-            </article>
-            <article class="card flex-ctr">
-                <h3>Character Name</h3>
-            </article>
-            <article class="card flex-ctr">
-                <h3>Character Name</h3>
-            </article>
-            <article class="card flex-ctr">
-                <h3>Character Name</h3>
-            </article>
-            <article class="card flex-ctr">
-                <h3>Character Name</h3>
-            </article>
-            <article class="card flex-ctr">
-                <h3>Character Name</h3>
-            </article>
-            <article class="card flex-ctr">
-                <h3>Character Name</h3>
-            </article>
-            <article class="card flex-ctr">
-                <h3>Character Name</h3>
-            </article>
-            <article class="card flex-ctr">
-                <h3>Character Name</h3>
-            </article>
-            <article class="card flex-ctr">
-                <h3>Character Name</h3>
-            </article>
-            <article class="card flex-ctr">
-                <h3>Character Name</h3>
-            </article>
-            <article class="card flex-ctr">
-                <h3>Character Name</h3>
-            </article>
-            <article class="card flex-ctr">
-                <h3>Character Name</h3>
-            </article>
-            <article class="card flex-ctr">
-                <h3>Character Name</h3>
-            </article>
-            <article class="card flex-ctr">
-                <h3>Character Name</h3>
-            </article>
-            <article class="card flex-ctr">
-                <h3>Character Name</h3>
-            </article>
+        <section class="flex-ctr" id="container">
+
         </section>
     </main>
     <footer>
-        <p>Copyright &copy; All Rights Reserved 2020 the office app</p>
+        <p>Copyright &copy; All Rights Reserved 2020 The Lord of the Rings app</p>
     </footer>
 </body>
 
