--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
     <!DOCTYPE html>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script defer src="./js/script.js"></script> 
-    <title>The Office App</title>
+    <!-- jQuery Modal -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
+    <script defer src="./js/script.js"></script>
+    <title>LOTR APP</title>
 </head>
 
 <body>
     <header>
-        <h1>The Lord of the Rings app</h1>
+        <h1>One App to Rule Them All</h1>
     </header>
     <main class="flex-ctr">
         <section class="flex-ctr" id="container">
@@ -24,6 +27,10 @@
     <footer>
         <p>Copyright &copy; All Rights Reserved 2020 The Lord of the Rings app</p>
     </footer>
+    <!-- Modal HTML embedded directly into document -->
+    <div id="lotrModal" class="modal">
+        
+    </div>
 </body>
 
 </html>
